Corrected gap and image sizes with flex gap.

--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -108,15 +108,12 @@ body {
 					&.active {
 						display: flex;
 						flex-wrap: wrap;
+						gap: 16px;
 					}
 					.gallery {
 						float: left;
-						width: 33.33%;
-						padding-bottom: 16px;
-						
-						&:not(:nth-of-type(3)) {
-							padding-right: 16px;
-						}
+						flex: 1 1 calc(33.333% - 16px);
+						gap: 16px;
 						a {
 							img {
 								display: block;
